# Banshee.Renamer

./: AssemblyInfo.cs  AssemblyInfo.cs.in  Banshee.Renamer.addin.xml  Banshee.Renamer.config  Banshee.Renamer.csproj  Banshee.Renamer.make  Banshee.Renamer.sln  Makefile.am  Makefile.include  README.md  autogen.sh  banshee-renamer.pc.in  banshee.renamer.pc.in  configure.ac  old.Makefile.am  tagrelease
Banshee.Renamer/: DbTrackFilenameEngineV1.cs  FilenamePatterns.cs  ICompiledFilenamePattern.cs  ICompiledTemplate.cs  IFilenamePatternCompiler.cs  ITemplateEngine.cs  PatternCompilationException.cs  PatternStorage.cs  RenamerDialog.cs  RenamerService.cs  RenamerWindow.cs  RenamingProgressDialog.cs  SimplePattern.cs  SimplePatternCompiler.cs  SongFilenameTemplates.cs  TemplateCompilationException.cs  TemplateEngineV1.cs  TemplateStorage.cs  TrackInfoParameterMap.cs
Banshee.Renamer/Tests/: TrackInfoParameterMapTest.cs
Resources/: RenamerActionsUI.xml
gtk-gui/: Banshee.Renamer.RenamerWindow.cs  Banshee.Renamer.RenamingProgressDialog.cs  gui.stetic
packaging/Fedora/: banshee-renamer.spec.in
packaging/Ubuntu/debian/: changelog  control  copyright
